BB-338 Update Client and Contract Tests
